# sllm

./: README.md
cesco-deskroom/: ERD.md  README.md  deploy.py  docker-compose.yml  init.sql  insert_industry_codes.py  insert_voc_data.py  pyproject.toml  user_features_schema.sql
cesco-deskroom/docs/faqs/: how-to-detect-model-retraining-needs.md  how-to-identify-user-activation.md
cesco-deskroom/docs/specs/: churn-prediction-guide.md  potential-user-recommendation-guide.md  user-recommendation-guide.md  voc-analysis-guide.md
cesco-deskroom/entities/analytics/: cluster_profile.py  user_churn_prediction.py  user_monthly_property.py  user_recommendation.py  user_voc_activity.py  voc_message_category.py
cesco-deskroom/entities/source/: message.py  user_monthly_features.py  voc_category.py
cesco-deskroom/flows/analyze_current_user/: _main.py  active_check.py  feature_engineering.py  main.py  unprocessed.py
cesco-deskroom/flows/analyze_potential_user/: main.py
cesco-deskroom/flows/analyze_voc_message/: main.py  processor.py
cesco-deskroom/flows/common/: db_utils.py
cesco-deskroom/flows/monitor_model_health/: main.py
cesco-deskroom/local_files/: bz_code_10_sm.csv  bz_code_10_sm_converted.csv  voc_category_table.csv
cesco-deskroom/src/: dataloader.py
cesco-deskroom/src/core/: db_utils.py
cesco-deskroom/src/models/: churn_model_with_csi.pkl  simple_clustering_model_pca.pkl  training_averages_with_csi.pkl
cesco-deskroom/src/models/churn_prediction/: predictor.py  train.py
cesco-deskroom/src/models/recommendation/: category_mapper.py  mapping_constants.py  recommender.py  train.py
cesco-deskroom/worker/: Dockerfile  requirements.txt
cesco-inference-server/: Dockerfile  README.md  app.py  docker-build.sh  docker-compose.yml  pyproject.toml  start_server.sh  train.py
cesco-inference-server/docs/: TECHNICAL_SPECIFICATION.md
cesco-inference-server/docs/faqs/: env-setup.md  troubleshoot-logs.md
