[project]
name = "cesco-deskroom"
version = "0.1.0"
description = "CESCO sLLM Project Repository"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.1.0",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "rouge-score>=0.1.2",
    "xlwings>=0.33.15",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.0",
    "pyarrow>=21.0.0",
    "rank-bm25>=0.2.2",
    "prefect>=3.6.2",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "shap>=0.49.1",
    "matplotlib>=3.10.7",
    "prefect-github>=0.3.2",
    "ruff>=0.14.6",
    "pre-commit>=4.0.0",
    "psycopg2>=2.9.11",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["flows", "entities", "src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
