[project]
name = "cesco-inference-server"
version = "0.1.0"
description = "FastAPI server for CESCO model inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch==2.8.0",
    "transformers>=4.56.1",
    "datasets>=4.1.0",
    "pydantic>=2.4.0",
    "peft>=0.17.1",
    "unsloth==2025.10.12",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "unsloth-zoo==2025.10.13",
    "xlwings>=0.33.15",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.0",
    "wandb>=0.22.2",
    "pyarrow>=21.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.6.0",
]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
